--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,7 +3,7 @@ spring:
     #配置阿里巴巴数据源的四大件
     druid:
       driver-class-name: com.mysql.jdbc.Driver
-      url: jdbc:mysql://localhost:3306/hris_db?useUnicode=true&characterEncoding=utf-8
+      url: jdbc:mysql://61.183.139.103:8082/hris_db?useUnicode=true&characterEncoding=utf-8
       username: root
       password: 123456
       #配置连接池的详细信息
