--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,8 @@
 	<artifactId>hris_sys_ver01</artifactId>
 	<version>1.0-SNAPSHOT</version>
 	<packaging>jar</packaging>
+
+
 	
 	<!--加入springboot-->
 	<parent>
@@ -18,6 +20,8 @@
 	
 	<properties>
 		<swagger2.version>2.7.0</swagger2.version>
+		<!--文件上传版本-->
+		<commons-fileupload.version>1.3.1</commons-fileupload.version>
 	</properties>
 	
 	<dependencies>
@@ -78,6 +82,13 @@
 			<groupId>commons-lang</groupId>
 			<artifactId>commons-lang</artifactId>
 			<version>2.4</version>
+		</dependency>
+
+		<!-- 文件上传 -->
+		<dependency>
+			<groupId>commons-fileupload</groupId>
+			<artifactId>commons-fileupload</artifactId>
+			<version>${commons-fileupload.version}</version>
 		</dependency>
 	
 	</dependencies>
