添加字段要求以及excel表格上传pom依赖

--- a/pom.xml
+++ b/pom.xml
@@ -90,6 +90,20 @@
 			<artifactId>commons-fileupload</artifactId>
 			<version>${commons-fileupload.version}</version>
 		</dependency>
+
+		<!--excel操作-->
+		<dependency>
+			<groupId>cn.afterturn</groupId>
+			<artifactId>easypoi-spring-boot-starter</artifactId>
+			<version>4.1.2</version>
+		</dependency>
+
+		<!-- JSON工具 -->
+		<dependency>
+			<groupId>com.alibaba</groupId>
+			<artifactId>fastjson</artifactId>
+			<version>1.2.45</version>
+		</dependency>
 	
 	</dependencies>
 
