--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
 		<!--文件上传版本-->
 		<commons-fileupload.version>1.3.1</commons-fileupload.version>
 	</properties>
+
 	
 	<dependencies>
 		
@@ -104,7 +105,20 @@
 			<artifactId>fastjson</artifactId>
 			<version>1.2.45</version>
 		</dependency>
-	
+
+
+		<dependency>
+			<groupId>com.aliyun.oss</groupId>
+			<artifactId>aliyun-sdk-oss</artifactId>
+			<version>3.10.2</version>
+		</dependency>
+
+		<dependency>
+			<groupId>commons-fileupload</groupId>
+			<artifactId>commons-fileupload</artifactId>
+			<version>1.3.1</version>
+		</dependency>
+
 	</dependencies>
 
 
